--- a/Practices/JickbangCopy_210820/app/src/main/AndroidManifest.xml
+++ b/Practices/JickbangCopy_210820/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JickbangCopy_210820">
         <activity
+            android:name=".ViewRoomDetailActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
