--- a/Practices/JickbangCopy_210820/app/src/main/AndroidManifest.xml
+++ b/Practices/JickbangCopy_210820/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gukjang.jickbangcopy_210820">
 
+    <uses-permission android:name="android.permission.CALL_PHONE"/>             // 권한 부여
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,16 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JickbangCopy_210820">
         <activity
+            android:name=".SplashActivity"
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity
             android:name=".ViewRoomDetailActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
