--- a/Practices/JickbangCopy_210820/app/src/main/AndroidManifest.xml
+++ b/Practices/JickbangCopy_210820/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.CALL_PHONE"/>             // 권한 부여
 
-    <application
+   <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.JickbangCopy_210820">
         <activity
             android:name=".SplashActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">       // no action bar
             android:exported="true" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
