--- a/LibraryPractice_210824/app/build.gradle
+++ b/LibraryPractice_210824/app/build.gradle
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    implementation 'io.github.ParkSangGwon:tedpermission:3.2.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.core:core-ktx:1.6.0'
