--- a/LibraryPractice_210824/app/src/main/AndroidManifest.xml
+++ b/LibraryPractice_210824/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gukjang.librarypractice_210824">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />        // 전화 권한
+    <uses-permission android:name="android.permission.INTERNET" />          // 인터넷 권한
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
