Manifest에 usesCleartextTraffic - http 도 허용

--- a/PizzaOrderApp_210825/app/src/main/AndroidManifest.xml
+++ b/PizzaOrderApp_210825/app/src/main/AndroidManifest.xml
@@ -4,11 +4,12 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <!-- usesCleartextTraffic : http 주소도 사용 가능하게 (추천은 안함) -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:usesCleartextTraffic="true"                 // http 주소도 사용 가능하게 (추천은 안함)
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PizzaOrderApp_210825">
