--- a/LibraryPractice_210824/app/build.gradle
+++ b/LibraryPractice_210824/app/build.gradle
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.airbnb.android:lottie:4.1.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'io.github.ParkSangGwon:tedpermission:3.2.0'
