--- a/LibraryPractice_210824/app/src/main/AndroidManifest.xml
+++ b/LibraryPractice_210824/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gukjang.librarypractice_210824">
 
-    <uses-permission android:name="android.permission.CALL_PHONE" />        // 전화 권한
-    <uses-permission android:name="android.permission.INTERNET" />          // 인터넷 권한
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,17 +13,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LibraryPractice_210824">
         <activity
-            android:name=".ViewPhotoActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".SplashActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ViewPhotoActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
         </activity>
     </application>
 
