--- a/PizzaOrderApp_210825/app/build.gradle
+++ b/PizzaOrderApp_210825/app/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    // implementation 'io.github.ParkSangGwon:tedpermission:3.2.0'
+    // implementation 'io.github.ParkSangGwon:tedpermission-normal:3.2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
