--- a/PizzaOrderApp_210825/app/src/main/AndroidManifest.xml
+++ b/PizzaOrderApp_210825/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.gukjang.pizzaorderapp_210825">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
