--- a/PizzaOrderApp_210825/app/src/main/AndroidManifest.xml
+++ b/PizzaOrderApp_210825/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.PizzaOrderApp_210825"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".EditNicknameActivity"
+            android:exported="true" />
+        <activity
             android:name=".ViewStoreDetailActivity"
             android:exported="true" />
         <activity
