rename - added date

--- a/JAVA/Operator_TernaryConditionOperator_210826/.project
+++ b/JAVA/Operator_TernaryConditionOperator_210826/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Variable_myInfo</name>
+	<name>Operator_TernaryConditionOperator_210826</name>
 	<comment></comment>
 	<projects>
 	</projects>
