--- a/JAVA/PassOrNot_210826/.project
+++ b/JAVA/PassOrNot_210826/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PassOrNot</name>
+	<name>PassOrNot_210826</name>
 	<comment></comment>
 	<projects>
 	</projects>
