--- a/JAVA/Variable_myInfo_210826/.project
+++ b/JAVA/Variable_myInfo_210826/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Operator_TernaryConditionOperator</name>
+	<name>Variable_myInfo_210826</name>
 	<comment></comment>
 	<projects>
 	</projects>
