--- a/JAVA/DiscountAmount/.project
+++ b/JAVA/DiscountAmount/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DiscountAmount</name>
+	<name>DiscountAmount_210826</name>
 	<comment></comment>
 	<projects>
 	</projects>
