--- a/JAVA/ScanAndMultiply/.project
+++ b/JAVA/ScanAndMultiply/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ScanAndMultiply</name>
+	<name>ScanAndMultiply_210827</name>
 	<comment></comment>
 	<projects>
 	</projects>
