--- a/JAVA/OOPPracticeStatic_210831/.project
+++ b/JAVA/OOPPracticeStatic_210831/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OOPPracticeStatic</name>
+	<name>OOPPracticeStatic_210831</name>
 	<comment></comment>
 	<projects>
 	</projects>
