--- a/PhoneBook_210902/app/src/main/AndroidManifest.xml
+++ b/PhoneBook_210902/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PhoneBook_210902">
         <activity
+            android:name=".EditPhoneNumActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
