--- a/PhoneBook_210902/app/src/main/AndroidManifest.xml
+++ b/PhoneBook_210902/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:name=".EditPhoneNumActivity"
             android:exported="true" />
         <activity
+            android:name=".EditPhoneNumActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
