--- a/Colosseum_210903/app/src/main/AndroidManifest.xml
+++ b/Colosseum_210903/app/src/main/AndroidManifest.xml
@@ -4,15 +4,17 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <!-- ClearTextTraffic - http 허용 -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Colosseum_210903">
+        android:theme="@style/Theme.Colosseum_210903"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
