--- a/MyFinalProject_210910/app/src/main/AndroidManifest.xml
+++ b/MyFinalProject_210910/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyFinalProject_210910">
+        android:theme="@style/Theme.MyFinalProject_210910"
+        android:name=".GlobalApplication">
 
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <activity
@@ -23,7 +24,6 @@
         <data android:scheme="@string/fb_login_protocol_scheme" />
     </intent-filter>
     </activity>
-
 
         <activity
             android:name=".LoginActivity"
