--- a/MyFinalProject_210910/app/build.gradle
+++ b/MyFinalProject_210910/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.kakao.sdk:v2-user:2.7.0'
     implementation 'com.facebook.android:facebook-login:8.0.0'
     implementation 'androidx.core:core-ktx:1.6.0'
