--- a/MyFinalProject_210910/app/src/main/AndroidManifest.xml
+++ b/MyFinalProject_210910/app/src/main/AndroidManifest.xml
@@ -3,10 +3,7 @@
     package="com.gukjang.myfinalproject_210910">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
-
-    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
 
     <application
         android:name=".GlobalApplication"
@@ -18,6 +15,9 @@
         android:theme="@style/Theme.MyFinalProject_210910"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".SplashActivity"
+            android:exported="true" />
+        <activity
             android:name=".EditAppointmentActivity"
             android:exported="true" />
         <activity
@@ -26,21 +26,25 @@
         <activity
             android:name=".SignUpActivity"
             android:exported="true" />
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         <activity
             android:name=".LoginActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
-        <meta-data android:name="com.kakao.sdk.AppKey" android:value="93c06c309e92fc6259e148ae8fc11b43"/>
-
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="93c06c309e92fc6259e148ae8fc11b43" />
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+        <meta-data
+            android:name="com.naver.maps.map.ubl5xakafs"
+            android:value="ubl5xakafs" />
 
         <activity
             android:name="com.facebook.FacebookActivity"
