네이버 지도 위도 / 경도에 맞춰서 카메라 이동

--- a/MyFinalProject_210910/app/build.gradle
+++ b/MyFinalProject_210910/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.airbnb.android:lottie:4.1.0'
     implementation("com.naver.maps:map-sdk:3.12.0")
     implementation files('libs/libDaumMapAndroid.jar')
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
