--- a/MyFinalProject_210910/settings.gradle
+++ b/MyFinalProject_210910/settings.gradle
@@ -5,6 +5,7 @@ dependencyResolutionManagement {
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
         maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/'}
+        maven { url 'https://naver.jfrog.io/artifactory/maven/' }
     }
 }
 rootProject.name = "MyFinalProject_210910"
