ListView 버튼 누르면 AppointmentData 들고 지도 화면으로 이동

--- a/MyFinalProject_210910/app/src/main/AndroidManifest.xml
+++ b/MyFinalProject_210910/app/src/main/AndroidManifest.xml
@@ -15,13 +15,16 @@
         android:theme="@style/Theme.MyFinalProject_210910"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ViewMapActivity"
+            android:exported="true" />
+        <activity
             android:name=".SplashActivity"
-            android:exported="true" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".EditAppointmentActivity"
@@ -34,8 +37,7 @@
             android:exported="true" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
@@ -43,7 +45,6 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="ubl5xakafs" />
