--- a/MyFinalProject_210910/app/build.gradle
+++ b/MyFinalProject_210910/app/build.gradle
@@ -37,7 +37,10 @@ android {
 
 dependencies {
     implementation 'com.airbnb.android:lottie:4.1.0'
-    implementation("com.naver.maps:map-sdk:3.12.0")
+    implementation "com.naver.maps:map-sdk:3.12.0"
+    implementation("com.naver.maps:map-sdk:3.12.0"){
+        exclude group : 'com.android.support'
+    }
     implementation files('libs/libDaumMapAndroid.jar')
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.kakao.sdk:v2-user:2.7.0'
