--- a/MyFinalProject_210910/app/build.gradle
+++ b/MyFinalProject_210910/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.airbnb.android:lottie:4.1.0'
     implementation "com.naver.maps:map-sdk:3.12.0"
     implementation("com.naver.maps:map-sdk:3.12.0"){
