닉네임 변경

--- a/MyFinalProject_210910/app/src/main/AndroidManifest.xml
+++ b/MyFinalProject_210910/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.MyFinalProject_210910"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".EditMyPlaceActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ViewMyPlaceListActivity"
+            android:exported="true" />
+        <activity
             android:name=".MySettingActivity"
             android:exported="true" />
         <activity
