--- a/MyFinalProject_210910/app/build.gradle
+++ b/MyFinalProject_210910/app/build.gradle
@@ -36,6 +36,9 @@ android {
 }
 
 dependencies {
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.2.3'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.airbnb.android:lottie:4.1.0'
     implementation "com.naver.maps:map-sdk:3.12.0"
