--- a/MyFinalProject_210910/app/build.gradle
+++ b/MyFinalProject_210910/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.nex3z:flow-layout:1.3.3'
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.2.3'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
