알람이 울릴 때 Notification 울릴 채널 준비

--- a/MyFinalProject_210910/app/src/main/AndroidManifest.xml
+++ b/MyFinalProject_210910/app/src/main/AndroidManifest.xml
@@ -102,6 +102,9 @@
         </activity>
         <service android:name=".services.MyJobService"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <receiver android:name=".receivers.AlarmReceiver"
+            android:exported="false" />
     </application>
 
 </manifest>
